--- a/slides/slides_environment.Rmd
+++ b/slides/slides_environment.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Accessibility and Reproducibility"
-author: "Best Practices for Writing Reproducible Code // part 5"
+title: "Dependencies and environment"
+author: "Best Practices for Writing Reproducible Code // part 4"
 output:
   xaringan::moon_reader:
     css: [default, metropolis, metropolis-fonts, 'custom.css']
