--- a/05-code-quality.Rmd
+++ b/05-code-quality.Rmd
@@ -5,7 +5,9 @@ Let's start making our code readable and reusable!
 This section covers the following topics:
 
 * code readability
+
 * reusable code
+
 * defensive programming
 
 Like the previous chapter, we have 3 short videos and accompanying exercises. 
@@ -25,71 +27,87 @@ The slides are linked below for reference, and be sure to ask for help when you 
 
 ### Video
 
-```{r}
+```{r echo=FALSE}
 vembedr::embed_url("https://vimeo.com/463572640")
 ```
 
 ### Slides
 
-```{r}
+```{r echo=FALSE}
 knitr::include_url("../slides/slides_code-quality.html#3")
 ```
 
 ### Exercise
-- Use a linter to run through your code and identify style issues.
-- Edit your code to improve the style compatibility, based on the feedback from your linter.
+
+* Use a linter to run through your code and identify style issues.
+
+* Edit your code to improve the style compatibility, based on the feedback from your linter.
   If you work with Python, consider applying [autopep8](https://pypi.org/project/autopep8/) to automatically fix linting issues.
-- For the R users: a course participant found [styler](https://styler.r-lib.org/), which may do the same for R!
-- If you find code that is hard to read, or variable names that need adjusting, make a note to work on it.
+
+* For the R users: a course participant found [styler](https://styler.r-lib.org/), which may do the same for R!
+
+* If you find code that is hard to read, or variable names that need adjusting, make a note to work on it.
   (Again, use #TODO or another consistent label!)
 
 ## Reusability
 
 ### Video
 
-```{r}
+```{r echo=FALSE}
 vembedr::embed_url("https://vimeo.com/463647105")
 ```
 
 ### Slides
 
-```{r}
+```{r echo=FALSE}
 knitr::include_url("../slides/slides_code-quality.html#12")
 ```
 
 ### Exercise
 
 Visualize your code.
-- Use yellow for scripted code, purple for structured code (for-loops, functions, etc.), and green for comments
-- Use any tool that works for you (powerpoint, word, paint, or good old pencils and paper)
-- During this exercise, try to identify yellow parts that can be structured and turned into (a) function(s). Label them, or rewrite them if you have time.
-- Make a screenshot or picture of your visualization, and share it on Teams!
+
+* Use yellow for scripted code, purple for structured code (for-loops, functions, etc.), and green for comments
+
+* Use any tool that works for you (powerpoint, word, paint, or good old pencils and paper)
+
+* During this exercise, try to identify yellow parts that can be structured and turned into (a) function(s). Label them, or rewrite them if you have time.
+
+* Make a screenshot or picture of your visualization, and share it on Teams!
 
 ## Robustness
 
 ### Video
 
-```{r}
+```{r echo=FALSE}
 vembedr::embed_url("https://vimeo.com/463647105")
 ```
 
 ### Slides
 
-```{r}
+```{r echo=FALSE}
 knitr::include_url("../slides/slides_code-quality.html#21")
 ```
 
 ### Exercise
 
-- Identify assumptions in your code
-  - What assumptions/expectations exist on your data or (user) input?
-  - What assumptions/expectations exist on the input of (a) function(s)?
+* Identify assumptions in your code
+  
+  * What assumptions/expectations exist on your data or (user) input?
+  
+  * What assumptions/expectations exist on the input of (a) function(s)?
 
 Based on the assumptions/expectations you were able to identify, work on increasing the robustness of your code.
 Choose one:
-- Make the input/data assumptions explicit
-  - Option 1: Explicitly state assumptions on data or input in your README.md.
-  - Option 2: Write a piece of code that tests the validity of data/input, and reports an error if the expectations are not met.
-- Test the input for a function. Modify the code inside your function to:
-  - check the value of the arguments passed to your function using if/else statements;
-  - raise an error in case an argument is out of the range of acceptable values.
+
+* Make the input/data assumptions explicit
+  
+  * Option 1: Explicitly state assumptions on data or input in your README.md.
+  
+  * Option 2: Write a piece of code that tests the validity of data/input, and reports an error if the expectations are not met.
+
+* Test the input for a function. Modify the code inside your function to:
+  
+  * check the value of the arguments passed to your function using if/else statements;
+  
+  * raise an error in case an argument is out of the range of acceptable values.
