--- a/slides/slides_code-quality.Rmd
+++ b/slides/slides_code-quality.Rmd
@@ -15,6 +15,17 @@ output:
 options(htmltools.dir.version = FALSE)
 ```
 
+
+```{r share-again, echo=FALSE}
+xaringanExtra::use_share_again()
+```
+
+```{r style-share-again, echo=FALSE}
+xaringanExtra::style_share_again(
+  share_buttons = c("twitter", "linkedin")
+)
+```
+
 # Aspects of good quality code
 
 .pull-left[
