--- a/slides/slides_introduction.Rmd
+++ b/slides/slides_introduction.Rmd
@@ -14,6 +14,16 @@ output:
 options(htmltools.dir.version = FALSE)
 ```
 
+```{r share-again, echo=FALSE}
+xaringanExtra::use_share_again()
+```
+
+```{r style-share-again, echo=FALSE}
+xaringanExtra::style_share_again(
+  share_buttons = c("twitter", "linkedin")
+)
+```
+
 # Thanks!
 
 - To you for being here!
