--- a/book/archiving-and-publishing.qmd
+++ b/book/archiving-and-publishing.qmd
@@ -9,10 +9,10 @@ vembedr::embed_url("https://vimeo.com/463947879")
 ### Slides
 
 ```{r echo=FALSE}
-xaringanExtra::embed_xaringan(url = "../slides/slides_reproducibility.html#1", ratio = "4:3")
+xaringanExtra::embed_xaringan(url = "slides/slides_reproducibility.html#1", ratio = "4:3")
 ```
 
-[Slides](../slides/slides_reproducibility.html#1)
+[Slides](slides/slides_reproducibility.html#1)
 
 ### Exercise (optional)
 
