--- a/book/licensing.qmd
+++ b/book/licensing.qmd
@@ -9,9 +9,9 @@ vembedr::embed_url("https://vimeo.com/463659936")
 ### Slides
 
 ```{r echo=FALSE}
-xaringanExtra::embed_xaringan(url = "../slides/slides_project-setup.html#9", ratio = "4:3")
+xaringanExtra::embed_xaringan(url = "slides/slides_project-setup.html#9", ratio = "4:3")
 ```
-[Slides](../slides/slides_project-setup.html#9)
+[Slides](slides/slides_project-setup.html#9)
 
 ### Exercise
 
