--- a/book/readability.qmd
+++ b/book/readability.qmd
@@ -9,10 +9,10 @@ vembedr::embed_url("https://vimeo.com/463572640")
 ### Slides
 
 ```{r echo=FALSE}
-xaringanExtra::embed_xaringan(url = "../slides/slides_code-quality.html#3", ratio = "4:3")
+xaringanExtra::embed_xaringan(url = "slides/slides_code-quality.html#3", ratio = "4:3")
 
 ```
-[Slides](../slides/slides_code-quality.html#3)
+[Slides](slides/slides_code-quality.html#3)
 
 ### Exercise
 
