--- a/book/readme-files.qmd
+++ b/book/readme-files.qmd
@@ -9,10 +9,10 @@ vembedr::embed_url("https://vimeo.com/464027978")
 ### Slides
 
 ```{r echo=FALSE}
-xaringanExtra::embed_xaringan(url = "../slides/slides_documentation.html#16", ratio = "4:3")
+xaringanExtra::embed_xaringan(url = "slides/slides_documentation.html#16", ratio = "4:3")
 
 ```
-[Slides](../slides/slides_documentation.html#16)
+[Slides](slides/slides_documentation.html#16)
 
 ### Exercise
 
