--- a/book/reusability.qmd
+++ b/book/reusability.qmd
@@ -9,9 +9,9 @@ vembedr::embed_url("https://vimeo.com/463647105")
 ### Slides
 
 ```{r echo=FALSE}
-xaringanExtra::embed_xaringan(url = "../slides/slides_code-quality.html#12", ratio = "4:3")
+xaringanExtra::embed_xaringan(url = "slides/slides_code-quality.html#12", ratio = "4:3")
 ```
-[Slides](../slides/slides_code-quality.html#12)
+[Slides](slides/slides_code-quality.html#12)
 
 ### Exercise
 
