--- a/book/robustness.qmd
+++ b/book/robustness.qmd
@@ -9,9 +9,9 @@ vembedr::embed_url("https://vimeo.com/463636970")
 ### Slides
 
 ```{r echo=FALSE}
-xaringanExtra::embed_xaringan(url = "../slides/slides_code-quality.html#21", ratio = "4:3")
+xaringanExtra::embed_xaringan(url = "slides/slides_code-quality.html#21", ratio = "4:3")
 ```
-[Slides](../slides/slides_code-quality.html#21)
+[Slides](slides/slides_code-quality.html#21)
 
 ### Exercise
 
