--- a/book/version-control.qmd
+++ b/book/version-control.qmd
@@ -9,9 +9,9 @@ vembedr::embed_url("https://vimeo.com/463264170")
 ### Slides
 
 ```{r echo=FALSE}
-xaringanExtra::embed_xaringan(url = "slides/slides_project-setup.html#15", ratio = "4:3")
+xaringanExtra::embed_xaringan(url = "slides/slides_project-setup.html", ratio = "4:3")
 ```
-[Slides](slides/slides_project-setup.html#15)
+[Slides](slides/slides_project-setup.html)
 
 ### Exercise
 
